# mlops_poetry

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/config/: preprocessing.yaml  training.yaml
{{cookiecutter.directory_name}}/src/: main.py
{{cookiecutter.directory_name}}/src/utils/: data_generator.py  model_arch.py  model_generator.py  predictor.py  preprocessor.py  trainer.py
